--- a/css/styles.css
+++ b/css/styles.css
@@ -43,8 +43,10 @@ body
 main content
 ************/
 #step-sequencer-body{
-  height:500px ;
-  min-width: 960px;;
+  height:500px;
+  width: 50%; 
+  min-width: 960px;
+  margin-right: auto;
   background-color: #414f45;
   text-align: center;
   border-width: 1px;
@@ -262,7 +264,9 @@ background-color: #1e3023;
 }
 .space-grid{
      display:inline-block;
-     margin: 2px; 
+     margin: 10px;
+     margin-bottom: 5px;
+     margin-top: 5px;  
 }
 
 /************
