--- a/css/styles.css
+++ b/css/styles.css
@@ -180,31 +180,33 @@ display:inline-block;
 font-family: Oxanium;
 line-height: normal;
 font-weight: bold;
-    width: 100px;
-    height: 40px;
-    margin-top: 10px;
-    margin-left: -20px;
-    display:inline-block; 
-    vertical-align:middle;
-    text-align: left;
+width: 100px;
+height: 40px;
+margin-top: 6px;
+margin-left: -20px;
+display:inline-block; 
+vertical-align:middle;
+text-align: left;
 }
 .mute-button{
+background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1718917/mute-2.svg");
+background-position: center;
+background-repeat: no-repeat;
+background-size: 15px 15px;
 display: inline-block;
 background-color: #4d6956;
+border-color: #000000;
 border-radius: 20px; 
-margin-left: -10px;   
+padding: 6px;
+margin-left:-10px;
+margin-right:-10px;
 width: 30px;
 height: 30px;
 }
-.mute-button:active{ /**for script **/
-background-color: #daf7e3;  
+.mute-button.active{
+background-color: #a0d9c2;
 }
-.img-mute{
-margin-top: -5px;
-margin-left: -2px;
-width: 18px;
-height: 18px;
-}
+
 .form-block{
 display:inline-block;
 font-family: Oxanium;
