--- a/css/styles.css
+++ b/css/styles.css
@@ -68,12 +68,13 @@ display: block;
     height: 50px;
     margin-top:20px;
     margin-right: 0px;
-    margin-left: 20px;
+    margin-left: 36px;
 border-style: solid;
 border-color: #1e241f;    
 border-width: 4px; 
 }
 .p-BPM{
+margin-top:2px;
 font-family: Oxanium;
 line-height: 1.2;
 font-weight: bold;
@@ -115,6 +116,7 @@ color:#000000;
 
 }
 .text-block{
+margin-top: -2px;
 font-family: Oxanium;
 line-height: 1.2;
 font-weight: bold;
